# Otus-HW-chats

./: .env.example  Makefile  README.md  docker-compose.e2e.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
app/: config.py  exceptions.py  logging_config.py  server.py
app/apps/: utils.py
app/apps/api/: __init__.py  auth.py  ping.py
app/apps/api/middleware/: request_id.py
app/apps/api/v1/: __init__.py  dialog.py
app/apps/consumers/: __init__.py  user.py
app/apps/middleware/: request_id.py
app/apps/workers/: __init__.py  dialog.py
app/core/: consts.py  enums.py  utils.py
app/core/clients/: __init__.py
app/core/clients/db/: __init__.py  base.py  postgres.py  redis.py
app/core/clients/kafka/: __init__.py  base.py  exceptions.py  schemas.py
app/core/clients/kafka/consumer/: __init__.py  base.py  exceptions.py
app/core/containers/: __init__.py  cfg.py  context.py
app/core/repositories/: __init__.py  unit_of_work.py
app/core/repositories/repos/: __init__.py  base.py  schemas.py  user.py
app/core/services/: __init__.py  base.py  tasks.py  utils.py
app/core/services/auth/: __init__.py  service.py  utils.py
app/core/services/dialogs/: __init__.py  service.py  utils.py
app/core/services/user/: __init__.py  service.py  utils.py
app/schemas/: base.py  types.py
app/schemas/api/: __init__.py  dialogs.py
app/schemas/dto/: __init__.py  conversation.py  dialog_outbox.py  messages.py  user.py
app/schemas/services/: __init__.py  auth.py  base.py  dialogs.py  user.py
app/scripts/redis/: README.md  get_dialog_with_users.lua  send_message_to_user.lua
docs/: DIALOG_COUNTER_SAGA.md
migrations/versions/: 2026-02-28_1_init.py
tests/: conftest.py
tests/api/: test_ws.py
tests/apps/middleware/: conftest.py  test_request_id.py
tests/consumers/: test_cache_feed_consumer.py  test_ws_consumer.py
tests/core/сlients/: test_active_websocket.py  test_websocket_manager.py
tests/fixtures/: factories.py  instances.py
tests/fixtures/mock_types/: __init__.py  ws.py
tests/service/: test_dialog_outbox_relay.py  test_dialogs.py  test_outbox_service.py  test_post.py  test_post_feed_cache_service.py  test_user_inbox.py
